changed header name of page and fixed alignment on bigger screen

--- a/balance.css
+++ b/balance.css
@@ -15,7 +15,8 @@
   display: flex;
   flex-direction: column;
   gap: 1.2rem;
-  max-width: 0; /*per shrink-are i ogetti*/
+  flex-basis: 0;
+  max-width: 0;
   justify-content: center;
 }
 
@@ -39,15 +40,16 @@
 .divBilancioFiltri {
   box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.25);
   display: flex;
-  align-items: center;
-  justify-content: space-around;
+  justify-content: flex-start;
   padding: 1rem;
   width: 100%;
   max-width: 27rem;
   height: auto;
   min-height: 1.2rem;
   border-radius: 2.5rem;
-  margin: 24px;
+  margin-top: 1rem;
+  margin-left: auto;
+  margin-right: auto;
   gap: 10px;
   flex-wrap: wrap;
 }
@@ -67,7 +69,7 @@
   font-size: 1.1rem;
   cursor: pointer;
   margin-top: 1rem;
-  margin-left: 130px;
+  margin-left: 100px;
   width: 80%;
   max-width: 15rem;
 }
@@ -97,9 +99,10 @@
   padding: 1rem;
   width: 95%;
   min-height: 26rem;
-  border: 2px solid #3498db;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.25);
   gap: 0.8rem;
   display: flex;
+  margin-left: 25px;
 }
 
 .transazioneOgetto {
@@ -245,6 +248,7 @@
   }
 
   .cartBil {
+    flex-direction: column;
     width: 100%;
     border-radius: 0; /* carta completo su mobile forse(?) fammi sapere */
     box-shadow: none;
@@ -256,15 +260,14 @@
   .divBilancioFiltri {
     /*flex-direction: column;*/ /* stack verticale per accessibilità */
     height: auto;
+    display: flex;
     gap: 1rem;
     padding: 1.5rem 1rem;
-    align-items: flex-start; /* mette ogetti a sinistra */
-    align-items: center !important;
-    justify-content: center !important;
     margin-left: auto;
     margin-right: auto;
     width: 100%;
     max-width: 22rem;
+    justify-content: flex-start;
   }
 
   .spanSaluto {
